--- a/packages/babel-plugin-boilerplate/.travis.yml
+++ b/packages/babel-plugin-boilerplate/.travis.yml
@@ -6,7 +6,7 @@ cache:
 notifications:
   email: false
 node_js: '8'
-install: npm install
+install: npm install --no-package-lock
 script: npm run validate
 after_success:
   - kcd-scripts travis-after-success
