--- a/packages/babel-plugin-boilerplate/package.json
+++ b/packages/babel-plugin-boilerplate/package.json
@@ -1,51 +1,59 @@
 {
-	"name": "babel-plugin-boilerplate",
-	"version": "0.0.1",
-	"description": "",
-	"main": "lib",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/USERNAME/babel-plugin-NEWPLUGINNAME.git"
-	},
-	"keywords": [ "babel", "plugin" ],
-	"author": "YOUR NAME <yourname@gmail.com> (https://github.com/USERNAME)",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/USERNAME/babel-plugin-NEWPLUGINNAME/issues"
-	},
-	"homepage": "https://github.com/USERNAME/babel-plugin-NEWPLUGINNAME#readme",
-	"dependencies": {
-		"@babel/plugin-syntax-jsx": "7.0.0-beta.42",
-		"babel-plugin-syntax-jsx": "^6.18.0",
-		"semver": "^5.5.0"
-	},
-	"peerDependencies": {
-		"babel-core": "6.x || ^7.0.0-0"
-	},
-	"devDependencies": {
-		"@babel/cli": "7.0.0-beta.42",
-		"@babel/helper-plugin-test-runner": "7.0.0-beta.42",
-		"@babel/preset-env": "7.0.0-beta.42",
-		"babel-core": "^7.0.0-0",
-		"babel-jest": "^22.4.1",
-		"husky": "^0.14.3",
-		"jest": "^22.4.2",
-		"lint-staged": "^7.0.0",
-		"prettier": "^1.11.1"
-	},
-	"scripts": {
-		"build": "babel src --out-dir lib",
-		"self-link": "npm link && npm link $npm_package_name",
-		"_pretest": "if [ ! -d ./node_modules/$npm_package_name ]; then npm run self-link; else npm run build; fi",
-		"pretest": "npm run build",
-		"test": "npm run test-only",
-		"test-only": "jest",
-		"precommit": "lint-staged",
-		"prepare": "npm run build",
-		"prepublish": "test $(npm -v | tr . '\\n' | head -n 1) -ge '4' || exit 1",
-		"prerelease": "npm run prepare && npm test",
-		"release:patch": "npm run prerelease && npm version patch && npm publish && git push --follow-tags",
-		"release:minor": "npm run prerelease && npm version minor && npm publish && git push --follow-tags",
-		"release:major": "npm run prerelease && npm version major && npm publish && git push --follow-tags"
-	}
+  "name": "babel-plugin-boilerplate",
+  "version": "0.0.1",
+  "description": "Generate code at build-time",
+  "main": "dist/index.js",
+  "engines": {
+    "node": "> 4",
+    "npm": "> 3"
+  },
+  "scripts": {
+    "add-contributor": "kcd-scripts contributors add",
+    "build": "kcd-scripts build",
+    "lint": "kcd-scripts lint",
+    "test": "kcd-scripts test",
+    "test:update": "kcd-scripts test --updateSnapshot",
+    "validate": "kcd-scripts validate",
+    "precommit": "kcd-scripts precommit"
+  },
+  "files": [
+    "dist",
+    "macro.js"
+  ],
+  "keywords": [
+    "babel-plugin-macros",
+    "babel-plugin",
+    "babel",
+    "code generation"
+  ],
+  "author": "your name <your@name.us> (http://yourname.com/)",
+  "license": "MIT",
+  "dependencies": {
+    "babel-plugin-macros": "^2.2.1",
+    "require-from-string": "^2.0.2"
+  },
+  "devDependencies": {
+    "ast-pretty-print": "^2.0.1",
+    "babel-plugin-tester": "^5.0.0",
+    "kcd-scripts": "^0.39.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/kcd-scripts/eslint.js"
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "coverage",
+    "dist"
+  ],
+  "babel": {
+    "presets": "kcd-scripts/babel"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kentcdodds/babel-plugin-boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kentcdodds/babel-plugin-boilerplate/issues"
+  },
+  "homepage": "https://github.com/kentcdodds/babel-plugin-boilerplate#readme"
 }
