clean up codegen things

--- a/packages/babel-plugin-boilerplate/.all-contributorsrc
+++ b/packages/babel-plugin-boilerplate/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
-  "projectName": "babel-plugin-codegen",
-  "projectOwner": "kentcdodds",
+  "projectName": "babel-plugin-boilerplate",
+  "projectOwner": "sw-yx",
   "files": [
     "README.md"
   ],
