--- a/packages/boilerplate.macro/package.json
+++ b/packages/boilerplate.macro/package.json
@@ -3,7 +3,10 @@
 	"version": "0.0.1",
 	"description": "your babel plugin with babel-macros",
 	"main": "index.js",
-	"keywords": [ "babel-plugin-macros", "babel-macros" ],
+	"keywords": [
+		"babel-plugin-macros",
+		"babel-macros"
+	],
 	"author": "Your Name <your@name.us> (http://yourname.com/)",
 	"license": "MIT",
 	"dependencies": {
