--- a/packages/babel-plugin-blade/.all-contributorsrc
+++ b/packages/babel-plugin-blade/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "babel-plugin-boilerplate",
+  "projectName": "babel-plugin-blade",
   "projectOwner": "sw-yx",
   "files": [
     "README.md"
