--- a/packages/babel-plugin-blade/package.json
+++ b/packages/babel-plugin-blade/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "babel-plugin-blade",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "generate inline graphql",
 	"main": "dist/index.js",
 	"engines": {
@@ -16,8 +16,16 @@
 		"validate": "kcd-scripts validate",
 		"precommit": "kcd-scripts precommit"
 	},
-	"files": [ "dist", "macro.js" ],
-	"keywords": [ "babel-plugin-macros", "babel-plugin", "babel", "code generation" ],
+	"files": [
+		"dist",
+		"macro.js"
+	],
+	"keywords": [
+		"babel-plugin-macros",
+		"babel-plugin",
+		"babel",
+		"code generation"
+	],
 	"author": "swyx <swyx@dontemail.me> (http://twitter.com/swyx)",
 	"license": "MIT",
 	"dependencies": {
@@ -35,7 +43,11 @@
 	"eslintConfig": {
 		"extends": "./node_modules/kcd-scripts/eslint.js"
 	},
-	"eslintIgnore": [ "node_modules", "coverage", "dist" ],
+	"eslintIgnore": [
+		"node_modules",
+		"coverage",
+		"dist"
+	],
 	"babel": {
 		"presets": "kcd-scripts/babel"
 	},
