--- a/packages/blade.macro/package.json
+++ b/packages/blade.macro/package.json
@@ -1,12 +1,15 @@
 {
 	"name": "blade.macro",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "your babel plugin with babel-macros",
 	"main": "index.js",
-	"keywords": [ "babel-plugin-macros", "babel-macros" ],
+	"keywords": [
+		"babel-plugin-macros",
+		"babel-macros"
+	],
 	"author": "swyx <swyx@dontemail.me> (http://twitter.com/swyx)",
 	"license": "MIT",
 	"dependencies": {
-		"babel-plugin-blade": "^0.0.1"
+		"babel-plugin-blade": "^0.0.2"
 	}
 }
