--- a/packages/babel-plugin-blade/package.json
+++ b/packages/babel-plugin-blade/package.json
@@ -16,16 +16,8 @@
 		"validate": "kcd-scripts validate",
 		"precommit": "kcd-scripts precommit"
 	},
-	"files": [
-		"dist",
-		"macro.js"
-	],
-	"keywords": [
-		"babel-plugin-macros",
-		"babel-plugin",
-		"babel",
-		"code generation"
-	],
+	"files": [ "dist", "macro.js" ],
+	"keywords": [ "babel-plugin-macros", "babel-plugin", "babel", "code generation" ],
 	"author": "swyx <swyx@dontemail.me> (http://twitter.com/swyx)",
 	"license": "MIT",
 	"dependencies": {
@@ -43,11 +35,11 @@
 	"eslintConfig": {
 		"extends": "./node_modules/kcd-scripts/eslint.js"
 	},
-	"eslintIgnore": [
-		"node_modules",
-		"coverage",
-		"dist"
-	],
+	"eslintIgnore": [ "node_modules", "coverage", "dist" ],
+	"jest": {
+		"testEnvironment": "node",
+		"testPathIgnorePatterns": [ "/node_modules/", "/fixtures/" ]
+	},
 	"babel": {
 		"presets": "kcd-scripts/babel"
 	},
