--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-	"devDependencies": {
-		"lerna": "^2.11.0"
-	},
-	"dependencies": {
-		"react": "^16.4.1"
-	}
+  "devDependencies": {
+    "lerna": "^2.11.0",
+    "mdx-deck": "^1.7.0",
+    "react-live": "^1.11.0"
+  },
+  "dependencies": {
+    "apollo-boost": "^0.1.15",
+    "downshift": "^2.1.5",
+    "emotion": "^9.2.8",
+    "graphql": "^0.13.2",
+    "hoist-non-react-statics": "^3.0.1",
+    "invariant": "^2.2.4",
+    "match-sorter": "^2.3.0",
+    "polished": "^2.0.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.11",
+    "react-emotion": "^9.2.8",
+    "react-scripts": "^1.1.5",
+    "styled-components": "^3.4.5"
+  },
+  "scripts": {
+    "start:talk": "mdx-deck talks/graphql-nyc/deck.mdx",
+    "build:talk": "npm run image:talk && mdx-deck build talks/graphql-nyc/deck.mdx",
+    "pdf:talk": "mdx-deck pdf talks/graphql-nyc/deck.mdx",
+    "image:talk": "mdx-deck screenshot talks/graphql-nyc/deck.mdx"
+  }
 }
