--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "lerna": "^2.11.0",
     "mdx-deck": "^1.7.0",
+    "mdx-deck-code-surfer": "^0.3.0",
+    "raw-loader": "^0.5.1",
     "react-live": "^1.11.0"
   },
   "dependencies": {
