--- a/talks/apollo-demo/package.json
+++ b/talks/apollo-demo/package.json
@@ -7,11 +7,14 @@
     "apollo-server-lambda": "^2.1.0",
     "graphql": "^14.0.2",
     "http-proxy-middleware": "^0.19.0",
+    "lodash": "^4.17.11",
     "netlify-lambda": "^0.4.0",
+    "node-fetch": "^2.2.0",
     "react": "^16.3.1",
     "react-apollo": "^2.2.2",
     "react-dom": "^16.3.1",
-    "react-scripts": "2.0.1"
+    "react-scripts": "2.0.1",
+    "shorthash": "^0.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
