--- a/packages/blade.macro/package.json
+++ b/packages/blade.macro/package.json
@@ -2,7 +2,7 @@
 	"name": "blade.macro",
 	"version": "0.1.11",
 	"description": "your babel plugin with babel-macros",
-	"main": "index.js",
+	"main": "src/index.js",
 	"keywords": [
 		"babel-plugin-macros",
 		"babel-macros"
