--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           node-version: '10.x'
       - run: npm install
+      - run: npm run bootstrap
       - run: npm test
         env:
           CI: true
