updates + fixes that go along with them

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "lerna": "^3.19.0"
+    "lerna": "^3.19.0",
+    "kcd-scripts": "^1.12.0"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
