--- a/packages/babel-plugin-blade/package.json
+++ b/packages/babel-plugin-blade/package.json
@@ -8,14 +8,17 @@
     "npm": "> 3"
   },
   "scripts": {
-    "add-contributor": "kcd-scripts contributors add",
     "build": "kcd-scripts build",
     "lint": "kcd-scripts lint",
     "test": "kcd-scripts test",
     "test:update": "kcd-scripts test --updateSnapshot",
     "validate": "kcd-scripts validate",
-    "precommit": "kcd-scripts precommit",
     "version": "npm run build"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "kcd-scripts pre-commit"
+    }
   },
   "files": [
     "dist",
@@ -30,16 +33,20 @@
   "author": "swyx <swyx@dontemail.me> (http://twitter.com/swyx)",
   "license": "MIT",
   "dependencies": {
-    "@babel/plugin-syntax-jsx": "^7.0.0-beta.52",
-    "babel-plugin-macros": "^2.2.1",
+    "@babel/plugin-syntax-jsx": "^7.7.4",
+    "@babel/runtime": "^7.7.6",
+    "babel-plugin-macros": "^2.8.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "require-from-string": "^2.0.2",
-    "semver": "^5.5.0"
+    "semver": "^6.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.7.6",
+    "@babel/core": "^7.7.5",
     "ast-pretty-print": "^2.0.1",
-    "babel-plugin-tester": "^5.0.0",
-    "kcd-scripts": "^0.39.0"
+    "babel-plugin-tester": "^8.0.1",
+    "kcd-scripts": "^1.12.0",
+    "prettier": "^1.19.1"
   },
   "eslintConfig": {
     "extends": "./node_modules/kcd-scripts/eslint.js"
@@ -58,7 +65,9 @@
     ]
   },
   "babel": {
-    "presets": "kcd-scripts/babel"
+    "presets": [
+      "kcd-scripts/babel"
+    ]
   },
   "repository": {
     "type": "git",
