--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+      - trying
+      - staging
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
